add remember, lookup, and delete commands
Per-guild key-value storage with Liquibase migration, JPA entity,
repository, service, and three hybrid slash+prefix commands.
Lookup supports pagination, detail view, and ? prefix shortcut.
Switch to spring-boot-starter-liquibase for proper auto-configuration.